--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ nav {
   text-decoration: none;
   color: #eaeaea;
   margin-bottom: 64px;
-  
 }
 
 .memory small {
@@ -116,6 +115,7 @@ aside {
    background-position: top right;
   background-repeat: no-repeat;
   background-size: auto 100%;
+  padding: 35px
 }
 
 aside img:nth-child(1) {
