--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+@keyframes body {
+    0% {background-color: rgb(226, 66, 66);}
+    15% {background-color: blueviolet;}
+    20% {background-color: rgb(18, 184, 206);}
+    25% {background-color: rgb(240, 217, 15);}
+    30% {background-color: rgb(252, 124, 4);}
+    40% {background-color: rgb(131, 243, 2);}
+    50% {background-color: rgb(9, 48, 58);}
+    55% {background-color: rgb(236, 13, 188);}
+    60% {background-color: rgb(233, 49, 49);}
+    70% {background-color: rgb(1, 28, 63);}
+    80% {background-color: rgb(20, 233, 116);}
+    90% {background-color: rgb(12, 226, 241);}
+    100% {background-color: rgb(0, 172, 43);}
+}
+
 * {
   margin: 0;
   padding;
@@ -62,6 +78,9 @@ nav {
 aside h6 {
   font-size: 15px;
   text-align: center;
+  animation-name: body;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
 }
 
 a {
@@ -119,6 +138,7 @@ aside {
 }
 
 aside img:nth-child(1) {
+  
   width: 50px;
   height: 50;
   border-radius: 50%;
@@ -126,6 +146,8 @@ aside img:nth-child(1) {
   border: 4px solid transparent;
   background: linear-gradient(#d39333, #ed5636, #633bbc) padding-box,
   linear-gradient(260deg, #d39333, #ed5636, #633bbc ) border-box;
+  animation-duration: 23s;
+  animation-iteration-count: infinite;
 }
 
 aside img:nth-child(2) {
