--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
 @keyframes body {
     0% {color: rgb(226, 66, 66);}
     15% {color: blueviolet;}
@@ -21,6 +23,65 @@
 }
 
 :root {
+  --dark-mode-word: #121215;
+  --light-mode-word: #bebebf;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.manha-noite {
+  position: fixed;
+  top: 20px; /* Ajuste o valor de acordo com a posição desejada no eixo Y */
+  right: 20px; /* Ajuste o valor de acordo com a posição desejada no eixo X */
+}
+
+
+.label {
+  background-color: #111;
+  border-radius: 50px;
+  cursor: pointer;
+
+  display: flex;
+  align-items: top;
+  justify-content: space-between;
+
+  padding: 5px;
+  position: relative;
+  height: 26px;
+  width: 50px;
+
+  transform: scala(1.5)
+}
+
+.label .ball {
+  background-color: #fff;
+  border-radius: 50px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+
+  height: 22px;
+  width: 22px;
+
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+  transform: translateX(24px);
+}
+
+.fa-moon {
+  color: #f1c40f;
+}
+.fa-sun {
+  color: #f39c12;
+}
+
+:root {
   font-size: 16px;
 }
 
@@ -39,7 +100,6 @@
 }
 
 body {
-  background-color: #121215;
   color: #eaeaea;
   font-family: 'Roboto', sans-serif;
 
@@ -47,6 +107,11 @@ body {
   grid-template-areas: "profile timeline";
   grid-template-rows: 1fr;
   height: 100vh;
+  transition: background 0.2s linear;
+}
+
+body.dark {
+  background-color: var(--dark-mode-word);
 }
 
 nav {
@@ -167,7 +232,7 @@ aside p {
 
 aside span {
   font-size: 0.75rem;
-  color: #9e9ea0;
+  color: var(--light-mode-word);
 }
  
 @media (max-width: 800px) {
