--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,65 @@
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
-@keyframes body {
-  0% {color: rgb(226, 66, 66);}
-  20% {color: rgb(18, 184, 206);}
-  40% {color: rgb(131, 243, 2);}
-  60% {color: rgb(233, 49, 49);}
-  80% {color: rgb(20, 233, 116);}
-  100% {color: rgb(0, 172, 43);}
-}
-
-
 * {
   margin: 0;
   padding;
   box-sizing: border-box;
+}
+
+.footer {
+  padding: 40px 0;
+}
+
+.footer .social {
+  text-align: center;
+  padding-bottom: 25px;
+  color: #4b4c4d;
+}
+
+.footer .social a {
+  font-size: 24px;
+  color: inherit;
+  border: 1px solid #ccc;
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin: 0 8px;
+  opacity: 0.75;
+}
+
+.footer ul {
+  margin-top: 0;
+  padding: 0;
+  list-style: none;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.footer ul li a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul li {
+  display: inline-block;
+  padding: 0 15px;
+  color: black;
+}
+
+.footer ul li a:hover {
+  opacity: 1;
+}
+
+.footer .copyright {
+  margin-top: 15px;
+  text-align: center;
+  font-size: 13px;
+  color: #aaa;
 }
 
 /* Cores dark/light mode  */
@@ -127,6 +173,12 @@ body.dark a {
 body.dark a:hover {
   color: #F97B22;
 }
+body.dark li {
+  color: var(--light-mode-word)
+}
+body.dark aside h6 {
+  color: var(--strong-white);
+}
 
 nav {
   padding: 64px;
@@ -160,7 +212,7 @@ aside h6 {
   font-size: 15px;
   text-align: center;
   animation-name: body;
-  animation: body 90s infinite;
+  color: var(--dark-mode-word)
 }
 
 a {
