--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,24 @@
   box-sizing: border-box;
 }
 
+/* footer line */
+.linha {
+  padding: 10px 0;
+  border-top: 1px solid rgb(48, 54, 61);
+}
+
+/* Footer code */
 .footer {
-  padding: 40px 0;
+  padding: 30px 0;
 }
 
 .footer .social {
   text-align: center;
   padding-bottom: 25px;
   color: #4b4c4d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer .social a {
@@ -28,6 +38,9 @@
   border-radius: 50%;
   margin: 0 8px;
   opacity: 0.75;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer ul {
@@ -37,18 +50,27 @@
   font-size: 18px;
   line-height: 1.6;
   margin-bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer ul li a {
   color: inherit;
   text-decoration: none;
   opacity: 0.8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer ul li {
   display: inline-block;
   padding: 0 15px;
   color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer ul li a:hover {
@@ -60,6 +82,9 @@
   text-align: center;
   font-size: 13px;
   color: #aaa;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Cores dark/light mode  */
@@ -155,7 +180,7 @@ body {
 body.dark {
   background-color: var(--dark-mode-word);
 }
-body.dark .memory p {
+body.dark .memory span {
   color: var(--light-mode-word);
 }
 body.dark .memory small {
@@ -164,7 +189,7 @@ body.dark .memory small {
 body.dark .memory h1 {
   color: var(--strong-white);
 }
-body.dark aside p {
+body.dark aside span {
   color: var(--strong-white);
 }
 body.dark a {
@@ -174,17 +199,25 @@ body.dark a:hover {
   color: #F97B22;
 }
 body.dark li {
-  color: var(--light-mode-word)
+  color: var(--light-mode-word);
 }
 body.dark aside h6 {
   color: var(--strong-white);
 }
+body.dark main p {
+  color: var(--light-mode-word);
+}
 
-nav {
+main {
   padding: 64px;
   grid-area: timeline;
 
   overflow-y: scroll;
+}
+
+main p {
+  padding: 1px;
+  color: var(--dark-mode-word);
 }
 
 .memory {
@@ -243,7 +276,7 @@ a:hover {
 }
 */
 
-.memory p {
+.memory span {
   font-size: 1.2rem;
   color: var(--dark-mode-word);
   line-height: 28px;
@@ -293,7 +326,7 @@ aside img:nth-child(2) {
   linear-gradient(260deg, #d39333, #ed5636, #633bbc ) border-box;
 }
 
-aside p {
+aside span {
   font-size: 2rem;
   text-align: center;
   color: var(--dark-mode-word)
@@ -314,7 +347,7 @@ aside p {
   }
 
 
-  nav {
+  main {
     overflow-y: visible;
     padding: 22px;
   }
