--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,225 @@
   padding: 0;
   box-sizing: border-box;
 }
-
-/* footer line */
-.linha {
-  padding: 10px 0;
-  border-top: 1px solid rgb(48, 54, 61);
+body {
+  color: #eaeaea;
+  font-family: 'Roboto', sans-serif;
+  height: 100vh;
+  transition: background 0.2s linear;
 }
 
-/* Footer code */
+/* Titulo */
+#title {
+  display: flex;
+  justify-content: space-between;
+  height: 35px;
+  align-items: center;
+  width: 95%;
+  margin: 0 auto;
+  color: #121215;
+}
+
+/* Cabeçalho */
+header {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 40px;
+  background-color: rgb(22, 27, 34);
+  color: white;
+} 
+
+/* links do cabeçalho */
+.header-ul {
+  display: flex;
+  justify-content:  space-between;
+  align-items: center;
+  list-style: none;
+  width: 65%;
+  height: 100%;
+}
+
+.header-ul a {
+  text-decoration: none;
+  color: white;
+  width: 100%;
+  heigth: 100%;
+  /* background: red; */
+}
+
+/* CONTEUDO PRINCIPAL DA PAGINA */
+main {
+  padding: 64px;
+  overflow-y: scroll;
+  overflow-y: visible;
+  padding: 22px;
+  width: 65%;
+  margin: 0 auto;
+}
+
+main p {
+  padding: 1px;
+  color: var(--dark-mode-word);
+}
+
+/* CLASS DO MAIN */
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  text-decoration: none;
+  color: #eaeaea;
+  margin-bottom: 64px;
+}
+
+.container small {
+  color: #bebebf;
+  font-size: 0.75rem;
+  color: var(--dark-mode-word)
+}
+
+.container h1 {
+  font-size: 2rem;
+  color: var(--dark-mode-word)
+}
+
+/* BOTÃO DARK MODE */
+
+.label {
+  background-color: #111;
+  border-radius: 50px;
+  cursor: pointer;
+  
+  display: flex;
+  align-items: top;
+  justify-content: space-between;
+  
+  padding: 5px;
+  position: relative;
+  height: 26px;
+  width: 50px;
+  
+  transform: scala(1.5)
+}
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+.label .ball {
+  background-color: #fff;
+  border-radius: 50px;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+
+  height: 22px;
+  width: 22px;
+
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+.checkbox:checked + .label .ball {
+  transform: translateX(24px);
+}
+.fa-moon {
+  color: #f1c40f;
+}
+.fa-sun {
+  color: #f39c12;
+}
+
+/* BARRA DE NAVEGAÇÃO LATERAL */
+
+/* Barra de navegação - cor e tamanho */
+::-webkit-scrollbar {
+  width: 8px;
+}
+/* Cor da barra de navegação */
+::-webkit-scrollbar-track {
+  background-color: #2c2c31;
+}
+/* Customizar a barrinha que percorre pelo track*/
+::-webkit-scrollbar-thumb {
+  background-color: #9e9ea0;
+}
+
+/* Cores dark/light mode  */
+:root {
+  --dark-mode-word: #121215;
+  --light-mode-word: #bebebf;
+  --strong-white: #F6F1F1;
+}
+:root {
+  font-size: 16px;
+}
+
+/* define estilos para um tema escuro (dark mode)  */
+body.dark {
+  background-color: var(--dark-mode-word);
+}
+body.dark .container span {
+  color: var(--light-mode-word);
+}
+body.dark .container small {
+  color: var(--light-mode-word);
+}
+body.dark .container h1 {
+  color: var(--strong-white);
+}
+body.dark aside span {
+  color: var(--strong-white);
+}
+body.dark a {
+  color: var(--strong-white);
+  text-decoration: none;
+}
+body.dark a:hover {
+  color: rgb(47, 129, 247);
+}
+body.dark header list {
+  color: var(--strong-white);
+} 
+body.dark #title h1 {
+  color: var(--strong-white);
+}
+body.dark main p {
+  color: var(--light-mode-word);
+}
+body.dark .footer-list ul li {
+  color: var(--light-mode-word);
+}
+
+/* Tamanho das fotos no main */
+.top1 {
+  width: 100%;
+  height: 280px;
+  object-fit: contain;
+  border-radius: 4px;
+}
+.top2 {
+  width: 100%;
+  height: 280px;
+  object-fit: contain;
+  border-radius: 4px;
+}
+
+
+/* Rodapé */
 .footer {
   padding: 30px 0;
 }
 
+.footer ul li a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Alinhamento da foto/link do footer */
 .footer .social {
   text-align: center;
   padding-bottom: 25px;
@@ -43,6 +250,7 @@
   align-items: center;
 }
 
+/* Pegando o footer +  */
 .footer ul {
   margin-top: 0;
   padding: 0;
@@ -53,15 +261,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.footer ul li a {
-  color: inherit;
-  text-decoration: none;
-  opacity: 0.8;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  color: black;
 }
 
 .footer ul li {
@@ -71,10 +271,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.footer ul li a:hover {
-  opacity: 1;
+  color: black;
 }
 
 .footer .copyright {
@@ -87,269 +284,22 @@
   align-items: center;
 }
 
-/* Cores dark/light mode  */
-:root {
-  --dark-mode-word: #121215;
-  --light-mode-word: #bebebf;
-  --strong-white: #F6F1F1;
-}
-
-.checkbox {
-  opacity: 0;
-  position: absolute;
-}
-
-.manha-noite {
-  position: fixed;
-  top: 20px; /* Ajuste o valor de acordo com a posição desejada no eixo Y */
-  right: 20px; /* Ajuste o valor de acordo com a posição desejada no eixo X */
-}
-
-
-.label {
-  background-color: #111;
-  border-radius: 50px;
-  cursor: pointer;
-
-  display: flex;
-  align-items: top;
-  justify-content: space-between;
-
-  padding: 5px;
-  position: relative;
-  height: 26px;
-  width: 50px;
-
-  transform: scala(1.5)
-}
-
-.label .ball {
-  background-color: #fff;
-  border-radius: 50px;
-  position: absolute;
-  top: 2px;
-  left: 2px;
-
-  height: 22px;
-  width: 22px;
-
-  transform: translateX(0px);
-  transition: transform 0.2s linear;
-}
-
-.checkbox:checked + .label .ball {
-  transform: translateX(24px);
-}
-
-.fa-moon {
-  color: #f1c40f;
-}
-.fa-sun {
-  color: #f39c12;
-}
-
-:root {
-  font-size: 16px;
-}
-
-/* Barra de navegação - cor e tamanho */
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #2c2c31;
-}
-
-/* Customizar a barrinha que percorre pelo track*/
-::-webkit-scrollbar-thumb {
-  background-color: #9e9ea0;
-}
-
-body {
-  color: #eaeaea;
-  font-family: 'Roboto', sans-serif;
-
-  display: grid;
-  grid-template-areas: "profile timeline";
-  grid-template-rows: 1fr;
-  height: 100vh;
-  transition: background 0.2s linear;
-}
-
-body.dark {
-  background-color: var(--dark-mode-word);
-}
-body.dark .memory span {
-  color: var(--light-mode-word);
-}
-body.dark .memory small {
-  color: var(--light-mode-word);
-}
-body.dark .memory h1 {
-  color: var(--strong-white);
-}
-body.dark aside span {
-  color: var(--strong-white);
-}
-body.dark a {
-  color: var(--strong-white);
-}
-body.dark a:hover {
-  color: #F97B22;
-}
-body.dark li {
-  color: var(--light-mode-word);
-}
-body.dark aside h6 {
-  color: var(--strong-white);
-}
-body.dark main p {
-  color: var(--light-mode-word);
-}
-
-main {
-  padding: 64px;
-  grid-area: timeline;
-
-  overflow-y: scroll;
-}
-
-main p {
-  padding: 1px;
-  color: var(--dark-mode-word);
-}
-
-.memory {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-
-  text-decoration: none;
-  color: #eaeaea;
-  margin-bottom: 64px;
-}
-
-.memory small {
-  color: #bebebf;
-  font-size: 0.75rem;
-  color: var(--dark-mode-word)
-}
-
-.memory h1 {
-  font-size: 2rem;
-  color: var(--dark-mode-word)
-}
-
-aside h6 {
-  font-size: 15px;
-  text-align: center;
-  animation-name: body;
-  color: var(--dark-mode-word)
-}
-
-a {
-  color: var(--dark-mode-word); /* Define a cor padrão do link para azul */
-}
-
-a:hover {
-  color: #9e9ea0; /* Define a cor do link visitado para roxo */
-}
-
-.memory img {
-  width: 100%;
-  height: 280px;
-  object-fit: cover;
-  border-radius: 8px;
-}
-
-/* Definindo um zoom na imagem
-.memory div {
-  width: 100%;
-  height: 280px;
-  overflow: hidden;
-  border-radius: 8px;
-}
-
-.memory:hover img {
-  transform: scale(1.1)
-}
-*/
-
-.memory span {
-  font-size: 1.2rem;
-  color: var(--dark-mode-word);
-  line-height: 28px;
-}
-
-aside {
-  grid-area: profile;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-
-  border-right: 1px solid;
-  border-image: linear-gradient(#727275, #2c2c31) 1;
-
-  background-image: url("./assets/background.svg");
-  background-position: top right;
-  
-   background-position: top right;
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-  padding: 35px;
-}
-
-aside img:nth-child(1) {
-  
-  width: 50px;
-  height: 50;
-  border-radius: 50%;
-
-  border: 4px solid transparent;
-  background: linear-gradient(#d39333, #ed5636, #633bbc) padding-box,
-  linear-gradient(260deg, #d39333, #ed5636, #633bbc ) border-box;
-  animation-duration: 23s;
-  animation-iteration-count: infinite;
-}
-
-aside img:nth-child(2) {
-  width: 160px; 
-  height: 160px;
-  border-radius: 50%;
-
-  /* Cores da borda da logoDnllira */
-  border: 4px solid transparent;
-  background: linear-gradient(#d39333, #ed5636, #633bbc) padding-box,
-  linear-gradient(260deg, #d39333, #ed5636, #633bbc ) border-box;
-}
-
-aside span {
-  font-size: 2rem;
-  text-align: center;
-  color: var(--dark-mode-word)
+/* footer line */
+.footer-line {
+  padding: 10px 0;
+  border-top: 1px solid rgb(48, 54, 61);
 }
 
  
 @media (max-width: 800px) {
-  body {
-    grid-template-column: 1fr 1fr;
-    grid-template-areas:
-    "profile"
-    "timeline";
+
+  main {
+    width: 100vw;
   }
 
   aside {
     border-right: none;
     padding: 32px 100px;
-  }
-
-
-  main {
-    overflow-y: visible;
-    padding: 22px;
   }
 
   .footer ul {
