--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,22 @@ main p {
   color: var(--dark-mode-word);
 }
 
+.collapsed {
+  display: none;
+}
+
+#toggleButton {
+    border: none;
+    padding: 6px;
+    border-radius: 6px;
+    margin-top: 6px;
+    background-color: var(--dark-mode-word);
+    color: var(--light-mode-word);
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all 0.5s ease-in-out;}
+
 /* BOTÃO DARK MODE */
 
 .label {
@@ -207,15 +223,13 @@ body.dark main p {
 body.dark .footer ul li {
   color: var(--strong-white);
 }
+body.dark #toggleButton {
+  background-color: var(--strong-white);
+  color: var(--dark-mode-word)
+}
 
 /* Tamanho das fotos no main */
-.top1 {
-  width: 100%;
-  height: 280px;
-  object-fit: contain;
-  border-radius: 4px;
-}
-.top2 {
+.img {
   width: 100%;
   height: 280px;
   object-fit: contain;
@@ -352,3 +366,8 @@ body.dark .footer ul li {
   }
 }
 
+@media (min-width: 768px) {
+  .img {
+    object-fit: cover;
+  }
+}
